--- a/code/style.css
+++ b/code/style.css
@@ -3,17 +3,32 @@ html {
   color: #fff;
   font-family: serif;
 }
-
 body {
   margin: 0 0;
 }
-
 .header-image {
-  display:flex;
+  display: flex;
   margin: 0 0;
 
   width:100vw;
   height: 45vh;
+}
+
+/* styling text */
+
+h1 {
+  font-size: 4.5vw;
+  background: linear-gradient(to right, #0f2533, #173348);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+h2 {
+  font-size: 2.5vw;
+  color: #173348;
+}
+p {
+  font-size: 1.5vw;
+  color: #173348;
 }
 
 /* styling header */
@@ -26,25 +41,20 @@ header {
   justify-content:space-between;
  
 }
-
 .site-name {
   display: flex;
   align-content: center;
 }
-
 .img-logo {
   padding: 1vw;
   height: 8vw;
    }
-
 .desktop-menu-navbar {
   display: flex;
   width: 40vw;
   justify-content: space-evenly;
   color: rgb(51, 51, 51);
-
   }
-
 .link-desktop-navbar {
   text-decoration: none;
   font-size: 1.2vw;
@@ -52,35 +62,37 @@ header {
   padding-left: 2vw;
 }
 
-/* styling header end */
-
-h1 {
-  font-size: 4.5vw;
-  background: linear-gradient(to right, #0f2533, #173348);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
 /*styling big news*/
 
 .big-news {
-  margin-top: 10vh;
+  margin: 5vw 5vh;
   display: flex;
   justify-content: space-evenly;
 }
-
 .img-big-news {
-  width: 43vw;
+  width: 35vw;
+}
+.big-news-text {
+  display: flex;
+  flex-direction: column;
+  width: 55vw;
+  margin: 2vw;
 }
 
-.p-big-news {
+/* styling other news */
+
+.other-news {
   display: flex;
-  width: 50vw;
-  
+  flex-wrap: wrap;
+  margin: 5vw 5vw;
+}
+.img-other-news {
+  width: 20vw;
+  margin: 1vw;
+  display: flex;
 }
 
 /*styling footer*/
-
 footer {
   display: flex;
   align-items: center;
@@ -90,17 +102,66 @@ footer {
   width: 100vw;
   background-color: #999999;
 }
-
 .link-footer {
   font-size: 1.3vw;
   text-decoration: none;
-  padding-right: 1vw;
+  margin-right: 1vw;
   display: inline-flex;
   justify-items: flex-end;
 }
-
 .link-footer img {
   width: 2vw;
   border: solid 1px #999999;
   border-radius: 50px;
 }
+
+@media (max-width: 667px) { /* mobilanpassning */
+  .desktop-menu-navbar {
+    display: none;
+  }
+  .header-image {
+    height: 20vh;
+  }
+  .img-logo {
+    width: 45px;
+    height: 45px;
+    align-self: center;
+  }
+  .site-name {
+    justify-self: center;
+  }
+  .big-news {
+    flex-direction: column;
+  }
+  .img-big-news {
+    width: 80vw;
+  }
+  .big-news-text {
+    width: 80vw;
+      }
+  .other-news {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .img-other-news {
+    width: 55vw;
+    margin: 15px auto;
+  }
+  footer {
+  height: 50px;
+  }
+  .link-footer img {
+    width: 15px;
+    height: 15px;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 15px;
+  }
+}
+@media (min-width: 668px max-width: 1024px)
