--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,180 @@
 html {
-  background: #0025ff;
+  background: #fff;
+  color: #000;
+  font-family: 'Avenir', 'Helvetica', sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4 {
+  line-height: 1;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+  transition: transform .2s ease-out;
+}
+
+a:hover {
+  color: #0a2fc4;
+  transform: translateX(5px);
+}
+
+img {
+  width: 100%;
+}
+
+section {
+  margin-top: 3rem;
+}
+
+/* header + nav */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  height: 80px;
+  padding: 0 2rem; 
+}
+
+header > * {
+  flex: 0 1 auto;
+  margin: 0;
+}
+
+.logo {
+  width: 50px;
+}
+
+.title {
+  display: none;
+}
+
+nav a {
+  margin-left: 3rem;
+}
+
+/* big article section */
+
+.article-big {
+  display: flex;
+  flex-direction: column;
+}
+
+.article-big-text {
+  flex: 0 1 40%;
+  padding: 2rem;
+}
+.article-big-img {
+  flex: 0 1 60%;
+  max-width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+
+/* articles grid */
+
+.articles-grid {
+  display: flex;
+  flex-direction: column;
+
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.article {
+  flex: 0 1 auto;
+  margin-bottom: 2rem;
+}
+
+.article .article-img {
+  max-width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.ratio {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 60%;
+  overflow: hidden;
+}
+
+.article-big-img img,
+.article-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  margin: 0;
+  -o-object-fit: cover;
+  object-fit: cover;
+  object-position: 50% 0%;
+}
+
+
+footer {
+  padding: 2rem;
+  background-color: #0a2fc4;
   color: #fff;
+  font-size: .9rem;
+}
+
+@media screen and (min-width: 768px) {
+  .article-big {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .article-big-img {
+    order: 2;
+  }
+
+  .article-big-text {
+    order: 1;
+  }
+
+  .articles-grid {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+  }
+  .article {
+    flex: 0 1 50%;
+    padding: 0 .5rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  header {
+    height: 120px;
+  }
+
+  .title {
+    display: inline;
+  }
+  .article {
+    flex: 0 1 25%;
+  }
 }
