--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,49 @@
-html {
+body {
   background: #0025ff;
   color: #fff;
+  margin: 0;
 }
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+p {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+/***** Header *****/
+
+header {
+  background-color: white;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.logo {
+  width: 70px;
+  height: 70px;
+}
+
+nav {
+  border: 1px solid blue;
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+@media (max-width: 500px) {
+.order-1{
+  order:1;
+}
+.order-2{
+  order:2;
+}
+}
+/***** BIG NEWS *****/
+
+
+
+/***** NEWS GRID *****/
