--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,142 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  font-family: 'Roboto Mono', monospace;
+  background: #fdd6cc;
+  color: #2a2828;
+  margin: 0;
+}
+
+/* header {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none;
+  background-color: darkgoldenrod;
+} */
+
+.navbar-all {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none;
+  background-color: darkgoldenrod;
+  display: block;
+}
+
+
+h1 {
+  font-size: 6em;
+  text-align: center;
+  font-weight: 700;
+  margin-top: 40px;
+}
+
+
+a {
+  color: #4357f0;
+  text-decoration: none;
+}
+
+i {
+  padding: 8px;
+}
+
+.big-news h1 {
+  font-size: 2.5em;
+  color: deeppink;
+}
+
+.big-news img {
+  width: 100%;
+}
+
+.navbar {
+  /* display: none; */
+}
+
+.portrett img {
+  padding: 40px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.most-read img {
+  padding: 0px 40px 10px 40px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.most-read h3 {
+  padding: 0px 40px 10px 40px;
+  margin: 0;
+}
+
+.most-read h4 {
+  font-style: italic;
+  margin: 0 40px 40px 40px;
+}
+
+.gallery-span {
+  text-align: center;
+}
+
+.gallery-span img {
+  padding: 40px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.gallery-span h4 {
+  font-style: italic;
+}
+
+
+.menu-toggle {
+/* width: 100px; */
+font-size: 2em;
+color: #4357f0;
+padding: 2em;
+}
+
+.arrow {
+  height: 30px;
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: coral;
+}
+
+hr.style-four {
+  height: 12px;
+  border: 0;
+  box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.1);
+}
+
+#arrows {
+  display: flex;
+  justify-content: center;
+}
+
+#black-logo-top {
+  max-width: 200px;
+  max-height: 200px;
+  padding: 1em 0em;
+}
+
+@media (min-width: 667px) and (max-width: 1024) {
+  .menu-toggle {
+    display: none;
+  } 
+}
+
+@media (min-width: 1025px) {
+.menu-toggle {
+  display: none;
+}
 }
