--- a/code/style.css
+++ b/code/style.css
@@ -36,19 +36,6 @@ h2{
   margin: 0;
 }
 
-button{
-  padding: 9px 25px;
-  background-color: rgba(0, 136, 169, 1);
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-  display: none;
-}
-
-button:hover{background-color: rgba(0, 136, 169, 0.6);}
-
-
 /* NAVBAR */
 
 span{
@@ -161,6 +148,10 @@ article img{
   margin-bottom: 2rem;
 }
 
+.big-news-text-block{
+  
+}
+
 /* MAIN CONTENT */
 main{
   margin: auto;
@@ -193,15 +184,43 @@ p{
 /* FOOTER */
 footer{
   margin: 0;
-  display: flex;
-  justify-content: flex-end;
-  padding: 30px 10px;
+  padding: 40px 10px;
   margin-top: 30px;
   background-color: rgba(0, 136, 169, 1);
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
+footer p, a, label{
+  font-size: 13px;
+}
 
+.footer{
+  max-width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#subscribe{
+  padding: 3px 10px;
+  background-color: rgba(236, 240, 241);
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  color: #0088a9;
+}
+
+#subscribe:hover{
+  background-color: rgba(236, 240, 241, 0.6);
+  border: none;
+}
+
+#email{
+  border-radius: 50px;
+  padding: 2px 10px;
+}
 
 /* MEDIA QUIERES */
 @media (min-width: 500px){
@@ -224,14 +243,17 @@ footer{
   }
   header {
     display: grid;
-    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+    grid-template-columns: 1fr max-content max-content 1fr;
   }
+  
   h2{
-    grid-column: 2 / span 1;
+    grid-column: 1 / span 1;
+    grid-row-start: 1;
   }
   nav{
     all: unset;
-    grid-column: 3/4;
+    grid-column: 3/-1;
+    grid-row-start: 1;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -239,7 +261,6 @@ footer{
 
   nav ul{
     display: flex;
-    border: 1px solid red;
   }
   nav li{
     margin-left: 3em;
@@ -248,9 +269,4 @@ footer{
   nav li a{
     opacity: 1;
   }
-
-  button{
-    display: inline;
-  }
 }
-
