--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,246 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background-color: #212322;
+  margin: 0;
+}
+
+header{
+  background-color: #EFF0F1;
+  padding: 10px;
+  height: 200px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#hippo {
+  height: 20%;
+  padding-left: 3px;
+}
+
+nav{
+  display: none;
+}
+
+nav a {
+  color: #EFF0F1;
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+h3{
+  color: #212322;
+  font-family: 'Raleway', sans-serif;
+}
+
+.Flode{
+ margin: 20px;
+ padding: 7px;
+}
+
+h2{
+  color: #EFF0F1;
+  font-family: Arial, Helvetica, sans-serif; 
+  line-height: 30px;
+  }
+  
+p{
+  color: #EFF0F1;
+  font-family: Arial, Helvetica, sans-serif;
+  size: 6px;
+}
+
+.welcome-Bignews{
+  padding: 80px 20px;
+  display: flex;
+  flex-direction: column;
+  width: 97%;
+  max-width: 97%;
+  margin: 0px;
+  }
+  
+  .welcome-Bignews img{
+    width: 90%;
+    margin: 10px;
+  }
+  
+  .welcome-Bignews div{
+  text-align: center;
+  max-width: 90%;
+  } 
+
+  .product{
+    background-color: #212322;
+    padding: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: right;
+    align-items: center;
+    display: flex;
+  }
+
+  .product-img{
+   width: 400px;
+  }
+
+  h1{
+    color: #EFF0F1;
+    font-family: Arial, Helvetica, sans-serif; 
+  }
+
+
+@media (min-width: 667px) and (max-width: 1024px){
+  body{
+  background-color: #EFF0F1;
+  /*flex-direction: column;*/
+}
+
+header{
+  background-color: #212322;
+  height: 170px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+#hippo {
+  height: 20%;
+  padding: 30px;
+}
+
+nav {
+  display: inline-block;
+  color: #212322;
+  font-family: 'Raleway', sans-serif;
+}
+
+h3{
+  color: red;
+  display: none;
+}
+
+
+.Flode{
+  display: none;
+}
+
+.welcome-Bignews{
+  flex-direction: row;
+  align-items: center;
+  max-width: 97%;
+  margin: 3px;
+}
+
+.welcome-Bignews img{
+width: 40%; 
+}
+
+.welcome-Bignews div{
+  text-align: left;
+  margin: 12px;
+}
+
+.product{
+  background-color: #EFF0F1;
+  /*display: flex;*/
+  flex-direction: row;
+  flex-wrap: wrap;
+
+}
+
+.product-img{
+  width: 250px;
+  margin: 2px;
+ }
+
+ h2{
+  color: #212322;
+}
+
+p{
+  color: #212322;
+}
+
+h1{
+  color: #212322; 
+}
+}
+
+@media (min-width: 1025px){
+body{
+  background-color: #212322;
+}
+
+header{
+  background-color: #EFF0F1;
+  height: 150px;
+  display: flex;
+  align-items: right;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+#hippo {
+  height: 50%;
+  padding: 20px;
+}
+
+nav {
+  display: none;
+}
+
+h3{
+  color: #212322;
+  height: 50%;
+  padding: 30px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 3em ;
+}
+
+h2{
+  color: #EFF0F1;
+  line-height: 30px;
+  }
+  
+p{
+  color: #EFF0F1;
+}
+
+h1{
+color: #EFF0F1;
+}
+
+.Flode{
+  display: none;
+}
+
+.welcome-Bignews{
+  flex-direction: row;
+  align-items: center;
+  max-width: 97%;
+}
+
+.welcome-Bignews img{
+width: 50%; 
+
+}
+.welcome-Bignews div{
+  text-align: left;
+  margin: 12px;
+}
+
+.product{
+  background-color: #212322;
+  padding: 15px;
+  display: flex;
+  align-content: center;
+  justify-items: center;  
+  flex-direction: row;
+  /*justify-content: flex-end;*/
+}
+
+.product-img{
+  width: 80%;
+ }
 }
