--- a/code/style.css
+++ b/code/style.css
@@ -3,6 +3,42 @@
   margin-left: auto;
   margin-right: auto;
 }
+/******  Header *****/
+header {
+  background-color: #333;
+  background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/fs/da8aa638653629.5769f4955a6d5.png);
+  font-family: 'Aleo', serif;
+  font-size: 1.1em;
+  height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+nav {
+  height: auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+nav a{
+  color: #f2f2f2;
+  padding: 10px 20px;
+  text-decoration: none;
+  
+
+}
+nav a:nth-child(odd) {
+  display:none;
+}
+
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/***** the first section "big news" *****/
 
 .big-news {
   display: flex;
@@ -47,6 +83,8 @@ object-fit: cover;
   background-color: #ddd;
   color: black;
 }
+
+/****** This is the second section the "small-news"**** */
 .row {
   display: flex;
   flex-direction: row;
@@ -54,62 +92,21 @@ object-fit: cover;
   justify-content: space-between;
   padding: 0px;
   width: 100%;
-}
-
-/*  Stylethe top navigation bar */
-header {
   background-color: #333;
-  background-image: url(chinese\ pattern.png);
-  padding: 20px 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;  
-  justify-content: space-around;
 }
 
-footer{
-  background-color: #333;
-  padding: 20px;
-  text-align: center;
-  color: aquamarine;
-  background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/fs/da8aa638653629.5769f4955a6d5.png);
-}
-
-/* Style the topnav links */
-header a {
-  color: #f2f2f2;
-  text-align: center;
-  padding: 10px 0px;
-  text-decoration: none;
-  max-width: 25vw;
-  overflow-x: hidden;
-
-}
-
-/* Change color on hover */
-header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Create three unequal columns that floats next to each other */
 .column {
   width: 100%;
   display: block;
   position: relative;
 }
-/* .column:first-of-type{
-padding-top: 10px;
-}
 
-.column:last-of-type{
-  padding-bottom: 10px;
-  } */
 
   .column a{
     position: absolute;
     bottom: 10px;
     right: 10px;
+    left: 10px;
     width: auto;
     overflow-y: hidden;
     z-index: 0;
@@ -140,25 +137,39 @@ padding-top: 10px;
     object-fit: cover;
 }
 
-.column h2 {
-  display: block;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 50%;
-  font-size: 1.5em;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
-  color: white;
-  text-shadow: 1px 1px 2px black; 
+
+footer{
+  background-color: #333;
+  padding: 20px;
+  text-align: center;
+  color: aquamarine;
+  background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/fs/da8aa638653629.5769f4955a6d5.png);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.foot img{
+  width: 100px;
+  height: 100px;
+  background: red;
+  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+  transition: width 2s, height 2s, transform 2s;
+  
+}
+
+.foot img:hover {
+  
+  -webkit-transform: rotate(360deg); /* Safari */
+  transform: rotate(360deg);
 }
 
 @media screen and (min-width: 576px) {
   #box{
     max-width: 90vw;
+  }
+  nav a:nth-child(odd) {
+    display: inline-flex;
   }
   .big-news {
     display: flex;
@@ -169,9 +180,9 @@ padding-top: 10px;
     
   }
   .big-news img {
-    height: 100%;
+    
   max-width: 50%;
-  min-height: 85%;
+  min-height: 100%;
   object-fit: cover;
 }
 
@@ -195,7 +206,9 @@ width: 90%;
   width: 90%;
   overflow: auto; 
 }
-
+.row {
+  background-image: url(chinese\ pattern.png);
+}
   .column {
     width: 50%; 
   }
