--- a/code/style.css
+++ b/code/style.css
@@ -3,52 +3,89 @@ html {
   color: #fff;
 }
 
-/* header {
-  position: fixed;
-  background: hsl(327, 28%, 74%)
-} */
+a.top {
+  color: black;
+  font-family: 'Alata', sans-serif;
+  font-size: smaller;
+  float: right;
+  opacity: 0.5;
+  margin: 5px;
+}
+
+a.active {
+  font-family: 'Alata', sans-serif;
+  font-size: large;
+}
 
 body {
-padding: 30px;
+padding: 5px 30px;
+margin: 0;
 }
 
 .sidebar {
-  width: 30%;
+  width: 100%;
   overflow: auto;
   position: relative;
+  float: right;
 }
 
 .sidebar a {
-  color: rgb(128, 62, 102);
+  color: rgb(255, 255, 255);
   text-decoration: none;
   padding: 10px;
+  float: right;
 }
 
 .sidebar a:hover {
   font-style: italic;
   font-size: large;
+  opacity: 0.5;
 }
 
 img {
-  width: 30%;
+  width: 50%;
   border-radius: 20px;
   margin: 10px;
+}
+
+img.headline {
+  width: 40%;
 }
 
 img.headline:hover {
   opacity: 0.4;
 }
 
+p {
+  font-family: 'Alata', sans-serif;
+  margin: 10px 15px;
+}
+
+p:hover {
+  font-style: italic;
+}
+
 h1 {
   font-family: 'Alata', sans-serif;
-  /* font-family: 'Abril Fatface', cursive; */
   text-align: center;
-  font-size: 50px;
+  font-size: 60px;
+}
+
+h1:hover {
+  text-shadow: 3px 3px 5px pink;
 }
 
 h2 {
 font-family: 'Alata', sans-serif;
-font-size: 30px;
+font-size: 40px;
+
+align-self: flex-start;
+padding: 10px 15px;
+}
+
+h2:hover {
+  text-decoration: underline;
+  opacity: 0.7;
 }
 
 .big-news {
@@ -59,90 +96,176 @@ font-size: 30px;
   display: flex;
 }
 
+
+.big-news p {
+  display: flex;
+  width: 80%;
+  align-self: flex-end;
+  padding: 15px;
+}
+
 .flex-parent {
   border: 8px solid rgb(61, 156, 168);
   border-radius: 35px;
   padding: 10px;
   margin: 15px;
   display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: baseline;
   flex-direction: row;
 }
 
+.flex-parent p {
+  width: 60%;
+}
 
 h3 {
 font-family: 'Alata', sans-serif;
  font-size: 20px; 
 }
 
+h3:hover {
+  text-decoration: underline;
+  opacity: 0.7;
+}
+
+footer {
+  border-top: 5px solid gray;
+  opacity: 0.4;
+  border-bottom: 5px solid gray;
+}
+
 @media (max-width: 1023px) {
   html {
-    background-color: white;
+    background-color: hsl(327, 28%, 74%);
   }
 
-  h1 {
-    color: rgb(61, 156, 168)
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+    /* background-image: url('pawprint.jpg'); */
   }
 
-  h2 {
-    color: rgb(61, 156, 168);
-  }
-
-  h3 {
-    color: rgb(61, 156, 168);
+  .sidebar a {
+    float: left;
   }
 
   img {
     width: 50%;
+    height: 50%;
+    align-self: center;
+  }
+
+  .big-news {
+    align-items: flex-start;
+  }
+
+  img.headline {
+    align-self: center;
   }
 
   .flex-parent {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
 
-  .flex-child {
-    width: 40%;
-    flex-wrap: wrap;
+  .flex-parent p {
+    width: 60%;
+    /* justify-items: center; */
   }
+
+  .cutest {
+    width: 50%;
+  }
+
+  .puppies {
+    width: 50%;
+  }
+
+  .doing {
+    width: 50%;
+  }
+
+  .snow {
+    width: 50%;
+  }
+
   
 }
 
 @media (max-width: 668px) {
   html {
-    background-color: rgb(61, 156, 168);
+    background-color: white;
   }
 
   .sidebar a {
     display: block;
+    text-align: center;
+    float: none;
+    color: grey;
+  }
+
+  p {
+    color: hsl(326, 33%, 65%);
+    align-self: center;
   }
 
   h1 {
     color: hsl(327, 28%, 74%);
+    font-size: 50px;
   }
 
   h2 {
     color: hsl(327, 28%, 74%);
+    font-size: 40px;
   }
 
   h3 {
     color: hsl(327, 28%, 74%);
+    font-size: 30px;
   }
 
-  img {
+  img.headline {
     width: 90%;
-    float: center;
+  }
+  img {
+    width: 80%;
+    align-items: center;
+    /* box-shadow: 5px 5px 8px rgb(168, 163, 163); */
   }
 
   .big-news {
     display: block;
-    border: 10px solid hsl(327, 28%, 74%);
-    border-radius: 20px;
+    border: 8px solid hsl(327, 28%, 74%);
+    /* border-radius: 0%; */
   }
 
   .flex-parent {
     flex-direction: column;
     width: 90%;
+    border: 2px solid hsl(327, 28%, 74%);
+    border-radius: 0%;
+  }
+
+  .cutest {
+    width: 80%;
+    border-bottom: 2px dotted grey;
+  }
+
+  .puppies {
+    width: 80%;
+    border-bottom: 2px dotted grey;
+  }
+
+  .doing {
+    width: 80%;
+    border-bottom: 2px dotted grey;
+  }
+
+  .snow {
+    width: 80%;
   }
 }
