renamed classes to make it more clear

--- a/style.css
+++ b/style.css
@@ -159,22 +159,22 @@ nav a {
 
 /*** OTHER NEWS CONTAINER ***/
 
-.other-news-container {
+.recipes-news-container {
   background: #f7f89b;
   text-align: center;
   padding: 24px;
 }
 
-.other-news-cards {
+.recipes-news-cards {
   display: flex;
   flex-flow: wrap-reverse;
 }
 
-.other-news-cards img {
+.recipes-news-cards img {
   width: 100%;
 }
 
-.other-news-cards a {
+.recipes-news-cards a {
   background: snow;
   color: #f7f89b;
   background-color: #739f25;
@@ -241,7 +241,7 @@ footer {
   margin: 16px;
 }
 
-.other-news-cards a {
+.recipes-news-cards a {
   width: 15%;
   flex-grow: 1;
   margin: 16px;
